# finalwhistle

./: .dockerignore  .env.example  .gitignore  Anchor.toml  CLAUDE.md  DEVNET.md  LICENSE  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json
.claude/commands/: ship.md  spike.md  test-all.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  package.json  tsconfig.json  wrangler.toml
apps/api/src/: index.ts
apps/keeper/: Dockerfile  package.json  wrangler.toml
apps/keeper/src/: context.ts  index.ts  scan.ts  settler.ts
apps/keeper/test/: reliability.test.ts
apps/web/: .env.example  Dockerfile  next.config.ts  package.json  tsconfig.json  wrangler.toml
apps/web/public/: _headers  llms.txt
docs/: COMPLIANCE.md  DEMO_SCRIPT.md  RESILIENCE_KIT_FINDINGS.md  TECHNICAL.md  TXLINE_FEEDBACK.md  diagrams.md
idl/: finalwhistle.json  finalwhistle.ts
programs/finalwhistle/: Cargo.toml
programs/finalwhistle/src/: constants.rs  error.rs  instructions.rs  lib.rs  oracle.rs  state.rs
programs/finalwhistle/src/instructions/: claim.rs  create_market.rs  place_position.rs  settle.rs  void.rs
programs/finalwhistle/tests/: integration.rs  settle_guards.rs  unit.rs
programs/finalwhistle/tests/common/: mod.rs
tests/: package.json  tsconfig.json
tests/golden/: stat_validation.devnet.json  synthetic_stat_validation.json
tests/src/: golden.test.ts  smoke.test.ts
tests/src/lifecycle/: devnet_lifecycle.ts  seed.ts  void.ts
tests/src/spike/: config.ts  txline-api.ts  (+1 more)
(+31 files in other folders)
