[package]
name = "finalwhistle"
version = "0.1.0"
description = "FinalWhistle — parametric prop-bet protocol that self-settles via TxLINE validate_stat CPI"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "finalwhistle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = "1.0.2"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = { version = "3.0.2", features = ["bincode"] }
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-account = "3.4.0"
solana-instruction = "3.4.0"
solana-pubkey = "3.0.0"
solana-program-pack = "3.1.0"
solana-program-option = "3.1.0"
solana-clock = "3.1.1"
solana-transaction-error = "3.3.0"
spl-token-interface = "2.0.0"
spl-associated-token-account-interface = "2.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
